# everybodyDanceNow_sample

./: README.md  test.py  train.py  try.py
pix2pixHD/data/: aligned_dataset.py  custom_dataset_data_loader.py  data_loader.py
pix2pixHD/models/: models.py  pix2pixHD_model.py  ui_model.py
pix2pixHD/options/: base_options.py  train_options.py
user_code/: CMakeLists.txt  README.md  smooth.cpp  utility.cpp  utility.h
util/: imgs2video.py  merge_video.py  read_video.py  smooth_points.py  transPose.py  utility.py  visualizer.py
